Updated routines for exploratory analyses

--- a/UN_ARs.ipynb
+++ b/UN_ARs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'ignore'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +448,7 @@
     "                \"Bulgaria\",\n",
     "                \"Croatia\",\n",
     "                \"Cyprus\",\n",
+    "                \"Czechia\",\n",
     "                \"Czech Republic\",\n",
     "                \"Denmark\",\n",
     "                \"Estonia\",\n",
@@ -922,6 +923,7 @@
     "                \"Croatia\",\n",
     "                \"Cyprus\",\n",
     "                \"Czech Republic\",\n",
+    "                'Czechia',\n",
     "                \"Denmark\",\n",
     "                \"Estonia\",\n",
     "                \"Finland\",\n",
@@ -984,6 +986,24 @@
     "                ]\n",
     "    \n",
     "    return dict(zip(IPCCreg,UNreg))\n",
+    "\n",
+    "def createIPCC5Rproj():\n",
+    "    \"\"\"Returns a dictionary having \n",
+    "    keys as IPCC 5 regions and values as UN country regions\n",
+    "    This function uses proxies to represent the IPCC regions\n",
+    "    to be used in the projections as there is not perfect match\"\"\"\n",
+    "\n",
+    "    IPCCreg = [\"WORLD\", \"R5MAF\", \"R5LAM\", \"R5ASIA\", \"R5OECD90+EU\", \"R5REF\" ] \n",
+    "    UNreg =[\n",
+    "        [\"WORLD\"], \n",
+    "        [\"AFRICA\"], \n",
+    "        [\"LATIN AMERICA AND THE CARIBBEAN\"], \n",
+    "        [\"ASIA\"], \n",
+    "        [\"More developed regions\"], \n",
+    "        [\"Russian Federation\"]]\n",
+    "    \n",
+    "    return dict(zip(IPCCreg,UNreg))\n",
+    "\n",
     "\n",
     "def createIPCC6Rproj():\n",
     "    \"\"\"Returns a dictionary having \n",
@@ -1359,6 +1379,7 @@
     "                \"Austria\",\n",
     "                \"Belgium\",\n",
     "                \"Croatia\",\n",
+    "                \"Czechia\",\n",
     "                \"Denmark\",\n",
     "                \"France\",\n",
     "                \"Finland\",\n",
@@ -1513,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1609,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1844,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
