Edited charts for outputs

--- a/UN_ARs.ipynb
+++ b/UN_ARs.ipynb
@@ -1977,6 +1977,7 @@
    "outputs": [],
    "source": [
     "def un_extraction (rex):\n",
+    "    \"\"\"Extracts future years estimates of deterministic population\"\"\"\n",
     "    path = \"data/UN\"\n",
     "    tabs = [\"Medium variant\", \"High variant\", \n",
     "            \"Low variant\", \"Constant-fertility\", \n",
