Update on code after internal revision

--- a/UN_ARs.ipynb
+++ b/UN_ARs.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'ignore'}"
+       "{'divide': 'warn', 'over': 'warn', 'under': 'ignore', 'invalid': 'warn'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1546,7 +1546,21 @@
     "    q 5 or 10 regions\n",
     "    \"countries\" chooses whether to read data from country-level.\n",
     "    If True, an IPCC region is read on a country-based usinf create_ipcc dictionary\n",
-    "    If False, an IPCC region is read combining aggregated regional data\"\"\"\n",
+    "    If False, an IPCC region is read combining aggregated regional data.\n",
+    "    Values are in million inhabitants.\n",
+    "    \n",
+    "    Receives\n",
+    "        years: list of years to consider (> 2020 ):\n",
+    "        - in UN_PPP2022: year >= 2022\n",
+    "        - in UN_PPP2019: year >= 2020\n",
+    "        - in UN_PPP2017: year >= 2015\n",
+    "        - in UN_PPP2015: year >= 2015\n",
+    "\n",
+    "        filename: name of file among UN probabilistic projection to extract\n",
+    "        numregions: number of IPCC regions to extract (1, 5, 6, 10)\n",
+    "    Generates\n",
+    "        all_data: dataframe with population (million)\n",
+    "        each year has a column where each row has a population value by scenario and region\"\"\"\n",
     "    folder = r\"data/UN\"\n",
     "    destination = os.path.join (folder, filename)\n",
     "    tabs = [\"Lower 95\", \"Lower 80\", \"Median\", \"Upper 80\", \"Upper 95\"]\n",
@@ -1592,7 +1606,15 @@
     "    \"\"\"Estimates UN deterministic values in million inhab for one past year\n",
     "    \"countries\" chooses whether to read data from country-level.\n",
     "    If True, an IPCC region is read on a country-based usinf create_ipcc dictionary\n",
-    "    If False, an IPCC region is read combining aggregated regional data\"\"\"\n",
+    "    If False, an IPCC region is read combining aggregated regional data.\n",
+    "    Values are in million inhabitants.\n",
+    "    Receives:\n",
+    "        years: 2020\n",
+    "        numregions: number of IPCC regions to extract (1, 5, 6, 10)\n",
+    "    Generates:\n",
+    "        all_data: dataframe with population value per year on a single column\n",
+    "        regions correspond to each single row\n",
+    "        scenario is the \"Estimate\" scenario of UN\"\"\"\n",
     "\n",
     "    folder = r'data/UN'\n",
     "    filename = \"WPP2022_GEN_F01_DEMOGRAPHIC_INDICATORS_REV1.xlsx\"\n",
@@ -1630,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1649,7 +1671,6 @@
     "\n",
     "    owo = pd.DataFrame()\n",
     "    return (world, regdata, owo)\n",
-    "\n",
     "\n",
     "def ipcc_create6R(all_data: pd.DataFrame, years: list):\n",
     "    \"\"\"All_data is a dataframe with UN data for the six regions\n",
@@ -1775,7 +1796,6 @@
     "    owo = owo[world.columns]\n",
     "    return (world, regdata, owo)\n",
     "\n",
-    "\n",
     "def ipcc_create10R(all_data: pd.DataFrame, years: list):\n",
     "    \"\"\"All_data is dataframe with all UN data\n",
     "    years is list of years to select in dataframe\n",
@@ -1865,14 +1885,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def un_tseries2022 (years, filename, numregions):\n",
-    "    \"\"\"Create a full dataframe including 2020 (deterministic\n",
-    "        and probabilistic projections for population\"\"\"\n",
+    "    \"\"\"Create a full dataframe including 2020 (taken from \"Estimates\")\n",
+    "    which is historical value in UN projections\n",
+    "    and is then followed by probabilistic projections for population\n",
+    "    This is to be used when there is no interest in the\n",
+    "    variation of historical values across the projection revision.\n",
+    "    Values are in million inhabitants.\"\"\"\n",
+    "    \"\"\"\n",
+    "    It receives:\n",
+    "    years: list of years (greater or equal than 2023)\n",
+    "    filename: name of a file with probabilistic projections\n",
+    "    numregions: integer on the number of IPCC regions\n",
+    "\n",
+    "    It generates a tuple with\n",
+    "    w: dataframe with global values of probabilistic projections\n",
+    "    r: dataframe with regional values of probabilistic projections\n",
+    "    o: dataframe with \"other regional\" values of probabilistic projections\n",
+    "    \"\"\"\n",
     "    ryears =[y for y in years if y != 2020]\n",
     "    all_data = un_reading(ryears, filename, numregions)\n",
     "\n",
@@ -1955,7 +1990,8 @@
     "def un_tseries (years, filename, numregions):\n",
     "    \"\"\"Create a full probabilistic dataframe\n",
     "        of probabilistic projections for population\n",
-    "        For revisions 2015, 2017, 2019\"\"\"\n",
+    "        For revisions 2015, 2017, 2019.\n",
+    "        Values are in million inhabitants.\"\"\"\n",
     "\n",
     "    all_data = un_reading(years, filename, numregions)\n",
     "    if numregions==1:\n",
@@ -1972,12 +2008,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def un_extraction (rex):\n",
-    "    \"\"\"Extracts future years estimates of deterministic population\"\"\"\n",
+    "def un_extraction (rex: str, years: list):\n",
+    "    \"\"\"Extracts future years estimates of deterministic population\n",
+    "    Values are in million inhabitants\"\"\"\n",
+    "    \"\"\"Receives:\n",
+    "    - rex: region name (native UN region)\n",
+    "    - years: list of years to consider\n",
+    "    Returns:\n",
+    "    all: dataframe with all population scenarios (deterministic)\n",
+    "    for the selected region\"\"\"\n",
     "    path = \"data/UN\"\n",
     "    tabs = [\"Medium variant\", \"High variant\", \n",
     "            \"Low variant\", \"Constant-fertility\", \n",
@@ -1992,8 +2035,7 @@
     "            \"WPP2017_GEN_DEMOGRAPHIC_INDICATORS.xlsx\",\n",
     "            \"WPP2019_GEN_DEMOGRAPHIC_INDICATORS.xlsx\",\n",
     "            \"WPP2022_GEN_F01_DEMOGRAPHIC_INDICATORS_REV1.xlsx\"]\n",
-    "    years = [2030, 2040, 2050, 2060, 2070,\n",
-    "        2080, 2090, 2100]\n",
+    "\n",
     "    columns = [str(y) for y in years] + [\"Region\", \"Scenario\",\"Variant\"]\n",
     "    revision = [\"2010\", \"2012\", \"2015\", \"2017\", \"2019\", \"2022\"]\n",
     "    all_data = pd.DataFrame()\n",
@@ -2023,9 +2065,66 @@
     "                                new[columns]), axis=0)\n",
     "                            \n",
     "    all = all_data.copy(deep=True)\n",
-    "    all[all.columns[:8] ]= all[all.columns[:8]]/1000\n",
+    "    all[all.columns[:9] ]= all[all.columns[:9]]/1000\n",
     "\n",
     "    return (all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def un_reading_historical(years: float, filename: str, numregions: int):\n",
+    "    \"\"\"Estimates UN deterministic values in million inhab for historical years\n",
+    "    Receives:\n",
+    "        years: list of historical years (2000, 2005, 2010, 2015, 2020)\n",
+    "        filename: name of a file with probabilistic projections \n",
+    "        numregions: number of IPCC regions to extract (1, 5, 6, 10)\n",
+    "    Generates:\n",
+    "        all_data: dataframe with population value per year on a single column\n",
+    "        regions correspond to each single row\n",
+    "        scenario is the \"Estimate\" scenario of UN\"\"\"\n",
+    "    folder = r'data/UN'\n",
+    "    destination = os.path.join (folder, filename)\n",
+    "    data = pd.read_excel(destination,\"Estimates\", skiprows=16)\n",
+    "    region_col = \"Region, subregion, country or area *\"\n",
+    "    readcol = \"Total Population, as of 1 July (thousands)\"\n",
+    "    columns = [region_col] + [\"Year\"] + [readcol]\n",
+    "    new = data[columns]\n",
+    "\n",
+    "    if numregions==1:\n",
+    "        reg_dict = createIPCC1R()\n",
+    "    if numregions==5:\n",
+    "        reg_dict = createIPCC5R()\n",
+    "    if numregions==6:\n",
+    "        reg_dict = createIPCC6R()\n",
+    "    if numregions==10:\n",
+    "        reg_dict = createIPCC10R()\n",
+    "\n",
+    "\n",
+    "    all_data = pd.DataFrame()\n",
+    "    new = new.rename(columns={region_col: \"UNRegion\"})\n",
+    "    for region in reg_dict.keys():\n",
+    "        regions = reg_dict[region]\n",
+    "        regdata = pd.DataFrame(new[new.UNRegion.isin(regions)])\n",
+    "        newdata = pd.DataFrame(regdata.groupby(\"Year\")[readcol].sum()/1000.0).reset_index()\n",
+    "        newdata[\"Year\"] = pd.Series(newdata[\"Year\"], dtype=int)\n",
+    "        newdata = pd.DataFrame(newdata[newdata.Year.isin(years)]).transpose()\n",
+    "        rename = dict(zip(list(newdata.columns),list(years)))\n",
+    "        newdata = newdata.rename(columns=rename)\n",
+    "        newdata = newdata.reset_index()\n",
+    "        newdata = newdata.drop(\"index\", axis=1)\n",
+    "        newdata[\"Scenario\"] = \"Estimates\"\n",
+    "        newdata[\"IPCCRegion\"] = region\n",
+    "        newdata[\"UNRegion\"] = region\n",
+    "        columns = [\"IPCCRegion\", \"Scenario\", \"UNRegion\"] + list(years)\n",
+    "        newdata = newdata[columns]\n",
+    "        all_data = pd.concat((all_data, \n",
+    "                    newdata[1:]), axis=0)\n",
+    "    return all_data\n",
+    "\n"
    ]
   }
  ],
