--- a/extractor_ARs.ipynb
+++ b/extractor_ARs.ipynb
@@ -17,17 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def nonharmARsextractor():\n",
+    "def nonharmARsextractor(folder: \"str\"):\n",
     "    \"\"\"Create a dataframe for each IPPC global database\n",
-    "    THe assessment reports (ARs) databases are stored in csv files in the data folder\n",
+    "    The assessment reports (ARs) databases are stored in csv files in the data folder\n",
     "    with these names\n",
-    "    AR5 in \"data/AR5_Scenario_Database.csv\",\n",
-    "    SR 1.5 \"data/IAMC15_Scenario_Database.csv\",\n",
-    "    AR6 \"data/AR6_Scenarios_Database_World_v1.1.csv\"\n",
+    "    Receives\n",
+    "    folder: \"str\" with the name of the folder where the ARs are stored\n",
+    "    AR5 in \"folder/AR5_Scenario_Database.csv\",\n",
+    "    SR 1.5 \"folder/IAMC15_Scenario_Database.csv\",\n",
+    "    AR6 \"folder/AR6_Scenarios_Database_World_v1.1.csv\"\n",
+    "    Returns\n",
+    "    ar5: \"pd.DataFrame\" with the AR5 database with original period disaggregation\n",
+    "    ar15: \"pd.DataFrame\" with the SR 1.5 database with original period disaggregation\n",
+    "    ar6: \"pd.DataFrame\" with the AR6 database with original period disaggregation\n",
     "    \"\"\"\n",
     "\n",
     "    non_year_col = [\"Model\", \"Scenario\", \"Region\", \"Variable\", \"Unit\"]\n",
@@ -63,10 +69,11 @@
     "        return (data)\n",
     "    \n",
     "    files = [\n",
-    "            \"data/AR5_Scenario_Database.csv\",\n",
-    "            \"data/IAMC15_Scenario_Database.csv\",\n",
-    "            \"data/AR6_Scenarios_Database_World_v1.1.csv\"]\n",
-    "            \n",
+    "            \"AR5_Scenario_Database.csv\",\n",
+    "            \"IAMC15_Scenario_Database.csv\",\n",
+    "            \"AR6_Scenarios_Database_World_v1.1.csv\"]\n",
+    "\n",
+    "    files = [folder + \"/\" + file for file in files]\n",
     "    ARsdata = []\n",
     "    for f,file in enumerate(files):\n",
     "        name = names[f]\n",
@@ -88,9 +95,22 @@
     "    return ar5, ar15, ar6\n",
     "\n",
     "\n",
-    "def nonharmARregsextractor():\n",
-    "    \"\"\"Create a yearly-interpolated \n",
-    "    dataframe for each regional database\"\"\"\n",
+    "def nonharmARregsextractor(folder: \"str\"):\n",
+    "    \"\"\"Create a dataframe from AR6 IPPC regional database\n",
+    "    The assessment reports (ARs) databases are stored in csv files in the data folder\n",
+    "    with these names\n",
+    "    Receives\n",
+    "    folder: \"str\" with the name of the folder where the ARs are stored\n",
+    "    (e.g. \"folder/AR\")\n",
+    "    Files are:\n",
+    "        \"AR6_Scenarios_Database_R5_regions_v1.1.csv\",\n",
+    "        \"AR6_Scenarios_Database_R6_regions_v1.1.csv\",\n",
+    "        \"AR6_Scenarios_Database_R10_regions_v1.1.csv\"\n",
+    "    Returns\n",
+    "    ar6reg5HI: \"pd.DataFrame\" with the 5regionAR6 database with original period disaggregation\n",
+    "    ar6reg6HI: \"pd.DataFrame\" with the 6-region AR6 database with original period disaggregation\n",
+    "    ar6reg10HI: \"pd.DataFrame\" with the 10-region AR6 database with original period disaggregation\n",
+    "    \"\"\"\n",
     "    non_year_col = [\"Model\", \"Scenario\", \"Region\", \"Variable\", \"Unit\"]\n",
     "    years   =    [\"2010\",\n",
     "                \"2015\",\n",
@@ -124,9 +144,11 @@
     "        return (data)\n",
     "    \n",
     "    files = [\n",
-    "            \"data/AR6_Scenarios_Database_R5_regions_v1.1.csv\",\n",
-    "            \"data/AR6_Scenarios_Database_R6_regions_v1.1.csv\",\n",
-    "            \"data/AR6_Scenarios_Database_R10_regions_v1.1.csv\"]\n",
+    "            \"AR6_Scenarios_Database_R5_regions_v1.1.csv\",\n",
+    "            \"AR6_Scenarios_Database_R6_regions_v1.1.csv\",\n",
+    "            \"AR6_Scenarios_Database_R10_regions_v1.1.csv\"]\n",
+    "\n",
+    "    files = [folder + \"/\" + file for file in files]\n",
     "            \n",
     "    ARsdata = []\n",
     "    for f,file in enumerate(files):\n",
@@ -155,11 +177,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def readmeta():\n",
+    "def readmeta(folder: \"str\"):\n",
     "    \"\"\"Create a dataframe with selected metadata:\n",
     "    dataframe with number and name of projects by report\n",
-    "    plus dataframe with model scenarios by project\"\"\"\n",
-    "    file=\"data/IAMstat.xlsx\"\n",
+    "    plus dataframe with model scenarios by project\n",
+    "    Receives\n",
+    "    folder: \"str\" with the name of the folder where the ARs are stored\n",
+    "    Reuturns\n",
+    "    scenarios: \"pd.DataFrame\" with the number \n",
+    "    othermeta[0]: name of projects in AR5\n",
+    "    othermeta[1]: name of projects in SR15\n",
+    "    othermeta[2]: name of projects in AR6\"\"\"\n",
+    "    file=os.path.join(folder, \"IAMstat.xlsx\")\n",
     "    tabs=[\"allscen\"]\n",
     "    for tab in tabs:\n",
     "        scenarios=pd.read_excel(file,tab)\n",
