Update to figures

--- a/UN_ARs.ipynb
+++ b/UN_ARs.ipynb
@@ -1651,8 +1651,14 @@
     "        if numregions==5:\n",
     "            reg_dict = createIPCC5R()\n",
     "        if numregions==6:\n",
-    "            reg_dict = createIPCC6Rproj()\n",
+    "            # Note that here we use the same definition as in IPPC regions\n",
+    "            # rather than UN aggregation which is used in UN_reading()\n",
+    "            # We could have used UN aggregation based on createIPCC6Rproj()\n",
+    "            # but there is a deviation in 2020 too big for 2020\n",
+    "            reg_dict = createIPCC6R() #createIPCC6Rproj()\n",
     "        if numregions==10:\n",
+    "            # Note that here we use the UN aggregation based on createIPCC10Rproj()\n",
+    "            # because this makes it consistent with UN_Reading() for next years\n",
     "            reg_dict = createIPCC10Rproj()\n",
     "    else: #if false, aggregates data into a \"modelregion\"\n",
     "        key = \"modelregion\"\n",
