--- a/utilities.ipynb
+++ b/utilities.ipynb
@@ -1336,6 +1336,7 @@
     "    fig.get_figure().suptitle(region, fontsize=16)\n",
     "\n",
     "    plt.show()\n",
+    "    return (fig)\n",
     "\n",
     "def plot_2ars(ars: pd.DataFrame, \n",
     "            undata1: pd.DataFrame,\n",
